# NALPy

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml  python-publish.yml
nalpy/: cmath.pyi  config.py  events.py  logging.py  system.py
nalpy/cmath/: cmath.c  cmath.pyx  cvector2.pyx
nalpy/console_utils/: __init__.py  _helpers.py  cursor.py  progressbar.py  spinner.py  styling.py
nalpy/humanizer/: __init__.py  string.py  time.py
nalpy/humanizer/inflections/: __init__.py  vocabulary.py
nalpy/humanizer/numbers/: __init__.py  heading_converter.py  metric.py  number_to_words_converter.py
nalpy/math/: __init__.py  _rect.py  _rect_int.py  _rect_offset.py  _rect_offset_int.py  _vector2.py  _vector2_int.py  rect.py  vector2.py
nalpy/math/_c_extensions/: functions.c  functions.pxd  functions.pyi  functions.pyx  mvector2.c  mvector2.pyi  mvector2.pyx  mvector2_int.c  mvector2_int.pyi  mvector2_int.pyx  vector2.c  vector2.html  vector2.pyi  vector2.pyx  vector2_int.c  vector2_int.pyi  vector2_int.pyx
nalpy/math/_components/: vector2.c  vector2.pyi
nalpy/math/_rect/: rect.py  rect_int.py  rect_offset.py  rect_offset_int.py
nalpy/math/_vector2/: mvector2.py  mvector2_int.py
src/nalpy/math/: __init__.py
src/nalpy/math/_vector2/: mvector2.py  vector2_int.py
tests/: performance.py  test_math.py  test_vector2.py  test_vector2_int.py
