[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nalpy"
authors = [
    { name = "Niko Leinonen" }
]
requires-python = ">=3.11"
description = "An experimental portable package for different types of projects."
version = "0.0.21"
dynamic = ["readme"]

[tool.setuptools.package-data]
"nalpy" = ["py.typed"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nalpy*"]
